# cloudstack-blog

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
blog_app/: database.py  logging_config.py  main.py  models.py  seed.py
blog_app/templates/: about.html  base.html  create.html  index.html  post.html
migrations/: env.py
migrations/versions/: 0131959d9c30_add_category_column.py  e0b4596513d3_add_summary_and_featured_image_columns.py
terraform/: backend.tf  main.tf  outputs.tf  variables.tf  versions.tf
terraform/modules/ecs/: main.tf  variables.tf
terraform/modules/rds/: main.tf  variables.tf
terraform/modules/s3/: main.tf  outputs.tf
terraform/modules/security/: main.tf  outputs.tf
terraform/modules/vpc/: main.tf  outputs.tf  variables.tf
