[tool.poetry]
name = "cloudstack-blog"
version = "0.1.0"
description = "A simple multi-tier blog application"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "blog_app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.0"}
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
jinja2 = "^3.1.0"
python-multipart = "^0.0.6"
alembic = "^1.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
